# gogoro-gen-ai-hackton

./: .gitignore  Building a RAG chatbot.ipynb  Dockerfile  README.md  chat_with_knowbedge_base.py  load_data_to_opensearch.py  pyproject copy.toml  pyproject.toml  requirements.txt  samconfig.toml  template.yaml  threshold_test.ipynb
.aws-sam/: build.toml
data_preprocessing/: invoke_claude3.py  serverless.yml
data_preprocessing/.serverless/: requirements.txt
main_flow/: flow.dag.yaml  is_question_relevant.py
main_flow/.promptflow/: flow.tools.json
src/: Dockerfile  data.py  requirements.txt
utils/: dataset.py  opensearch.py
