[tool.poetry]
name = "gogoro-hackathon"
version = "0.1.0"
description = ""
authors = ["sh1un <a0923183408@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
promptflow = "^1.11.0"
promptflow-core = "^1.11.0"
promptflow-tools = "^1.4.0"
python-dotenv = "^1.0.1"
langchain = "^0.1.20"
langgraph = "^0.0.49"
langchain-aws = "^0.1.4"
boto3 = "^1.34.107"
loguru = "^0.7.2"
opensearch-py = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
